This is much cleaner and follows the DRY principle perfectly. +++ 429 guests max

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,4 @@
 # nginx/nginx.conf - Updated configuration with simplified variables
-
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -24,7 +23,7 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
-
+    
     # Shared memory zones
     lua_shared_dict guest_sessions 10m;
     lua_shared_dict sse_sessions 5m;
@@ -32,7 +31,7 @@ http {
     server {
         listen 80;
         server_name localhost;
-
+        
         # SIMPLIFIED VARIABLES - ALL must be declared here
         set $user_type 'isnone';
         set $username 'anonymous';
@@ -41,25 +40,198 @@ http {
         set $is_guest 'false';
         set $guest_slot_id '';  # Now stores slot_number (1 or 2) as string
 
-        root /usr/local/openresty/nginx/html;
-        index index.html;
+        # STATIC ASSETS - No auth required
+        location /js/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location /css/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        location /static/ {
+            root /usr/local/openresty/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
 
-        # Error page definitions
+        # Handle missing source maps gracefully
+        location ~* \.map$ {
+            return 404;
+            log_not_found off;
+            access_log off;
+        }
+
+        location = /favicon.ico {
+            root /usr/local/openresty/nginx/html;
+            log_not_found off;
+            access_log off;
+        }
+
+        location = /health {
+            access_log off;
+            return 200 "healthy\n";
+            add_header Content-Type text/plain;
+        }
+
+        # TEMPLATE-BASED ROUTES
+        location = /login {
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_login_page()
+            }
+        }
+        
+        location = /register {
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_register_page()
+            }
+        }
+
+        # INDEX WITH TEMPLATE SYSTEM
+        location = / {
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_index_page()
+            }
+        }
+        
+        # CHAT SPA ROUTE - With auto-guest functionality
+        location = /chat {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("chat")
+            }
+        }
+        
+        # DASH SPA ROUTE
+        location = /dash {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("dash")
+            }
+        }
+        
+        # PENDING ROUTE (alias for dash for pending users)
+        location = /pending {
+            content_by_lua_block {
+                local is_who = require "is_who"
+                is_who.route_to_handler("dash")
+            }
+        }
+
+        # API ROUTES
+        location ~ ^/api/auth/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local login = require "login"
+                login.handle_auth_api()
+            }
+        }
+
+        location = /api/register {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local register = require "register"
+                register.handle_register_api()
+            }
+        }
+
+        location ~ ^/api/admin/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_admin = require "is_admin"
+                is_admin.handle_admin_api()
+            }
+        }
+
+        # GUEST API - Separate from chat API
+        location ~ ^/api/guest/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local is_guest = require "is_guest"
+                is_guest.handle_guest_api()
+            }
+        }
+
+        # CHAT API - Simple delegation to is_who routing
+        location ~ ^/api/chat/ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            add_header 'Cache-Control' 'no-cache';
+            add_header 'Connection' 'keep-alive';
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                -- Use the same routing logic as chat page, but for API
+                local is_who = require "is_who"
+                is_who.route_to_handler("chat_api")
+            }
+        }
+
+        # ERROR PAGES
         error_page 404 @custom_404;
-        error_page 500 502 503 504 @custom_50x;
         error_page 429 @custom_429;
-
-        # Static files
-        location / {
-            try_files $uri $uri/ =404;
-        }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-            expires 30d;
-            add_header Cache-Control "public";
-        }
-
-        # Custom 404 page
+        error_page 500 502 503 504 @custom_50x;
+        
         location @custom_404 {
             internal;
             content_by_lua_block {
@@ -68,7 +240,14 @@ http {
             }
         }
 
-        # Custom 50x page
+        location @custom_429 {
+            internal;
+            content_by_lua_block {
+                local is_public = require "is_public"
+                is_public.handle_429_page()
+            }
+        }
+        
         location @custom_50x {
             internal;
             content_by_lua_block {
@@ -77,60 +256,12 @@ http {
             }
         }
 
-        # Custom 429 page (Guest slots full)
-        location @custom_429 {
-            internal;
+        # CATCH-ALL for unknown routes
+        location / {
             content_by_lua_block {
-                local f = io.open("/usr/local/openresty/nginx/html/429.html", "r")
-                if f then
-                    local content = f:read("*a")
-                    f:close()
-                    ngx.header.content_type = 'text/html'
-                    ngx.say(content)
-                else
-                    ngx.say("<h1>Guest slots are full</h1><p>All guest slots are currently occupied. Please try again later.</p>")
-                end
+                local is_public = require "is_public"
+                is_public.handle_404_page()
             }
-        }
-
-        # Auth check endpoint
-        location /api/auth/check {
-            content_by_lua_block {
-                local is_who = require "is_who"
-                local user_info = is_who.get_user_info()
-                ngx.header.content_type = 'application/json'
-                ngx.say(require("cjson").encode(user_info))
-            }
-        }
-
-        # Example /chat endpoint
-        location /chat {
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("chat")
-            }
-        }
-
-        # Example /api/chat/ endpoint
-        location /api/chat/ {
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("chat_api")
-            }
-        }
-
-        # Example /dash endpoint
-        location /dash {
-            content_by_lua_block {
-                local is_who = require "is_who"
-                is_who.route_to_handler("dash")
-            }
-        }
-
-        # Example: API router (if needed)
-        location /api/ {
-            default_type text/html;
-            content_by_lua_file /usr/local/openresty/nginx/lua/api_router.lua;
         }
     }
 }
