--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Updated configuration with simplified variables
+# nginx/nginx.conf - Updated configuration with proper guest API support
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -183,7 +183,7 @@ http {
             }
         }
 
-        # GUEST API - Separate from chat API
+        # GUEST API - FIXED: Now properly handles guest session creation
         location ~ ^/api/guest/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
