--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
         server_name localhost;
         
         # SIMPLIFIED VARIABLES - ALL must be declared here
-        set $user_type 'isnone';
+        set $user_type 'is_none';
         set $username 'anonymous';
         set $is_admin 'false';
         set $is_approved 'false';
