--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,6 @@ pid /var/run/nginx.pid;
 env JWT_SECRET;
 env REDIS_HOST;
 env REDIS_PORT;
-env ADMIN_USERNAME;
 
 events {
     worker_connections 1024;
@@ -33,28 +32,24 @@ http {
         server_name localhost;
         
         # SIMPLIFIED VARIABLES - ALL must be declared here
+        set $username 'guest';
         set $user_type 'is_none';
-        set $username 'anonymous';
-        set $is_admin 'false';
-        set $is_approved 'false';
-        set $is_guest 'false';
-        set $guest_slot_id '';  # Now stores slot_number (1 or 2) as string
 
         # STATIC ASSETS - No auth required
         location /js/ {
-            root /usr/local/openresty/nginx/html;
+            root /usr/local/openresty/nginx/dynamic_content;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
         
         location /css/ {
-            root /usr/local/openresty/nginx/html;
+            root /usr/local/openresty/nginx/dynamic_content;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
         
         location /static/ {
-            root /usr/local/openresty/nginx/html;
+            root /usr/local/openresty/nginx/dynamic_content;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
@@ -66,38 +61,32 @@ http {
             access_log off;
         }
 
-        location = /favicon.ico {
-            root /usr/local/openresty/nginx/html;
-            log_not_found off;
-            access_log off;
-        }
-
-        location = /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
+        #location = /favicon.ico {
+        #    root /usr/local/openresty/nginx/dynamic_content;
+        #    log_not_found off;
+        #    access_log off;
+        #}
 
         # TEMPLATE-BASED ROUTES
         location = /login {
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_login_page()
+                local is_who = require "is_who"
+                is_who.handle_login_page()
             }
         }
         
         location = /register {
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_register_page()
+                local is_who = require "is_who"
+                is_who.handle_register_page()
             }
         }
 
         # INDEX WITH TEMPLATE SYSTEM
         location = / {
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_index_page()
+                local is_who = require "is_who"
+                is_who.handle_index_page()
             }
         }
         
@@ -140,8 +129,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local login = require "login"
-                login.handle_auth_api()
+                local is_who = require "is_who"
+                is_who.handle_auth_api()
             }
         }
 
@@ -159,8 +148,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local register = require "register"
-                register.handle_register_api()
+                local is_who = require "is_who"
+                is_who.handle_register_api()
             }
         }
 
@@ -178,8 +167,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local is_admin = require "is_admin"
-                is_admin.handle_admin_api()
+                local is_who = require "is_who"
+                is_who.handle_admin_api()
             }
         }
 
@@ -198,8 +187,8 @@ http {
             
             lua_need_request_body on;
             content_by_lua_block {
-                local is_guest = require "is_guest"
-                is_guest.handle_guest_api()
+                local is_who = require "is_who"
+                is_who.handle_guest_api()
             }
         }
 
@@ -235,32 +224,32 @@ http {
         location @custom_404 {
             internal;
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_404_page()
+                local is_who = require "is_who"
+                is_who.handle_404_page()
             }
         }
 
         location @custom_429 {
             internal;
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_429_page()
+                local is_who = require "is_who"
+                is_who.handle_429_page()
             }
         }
         
         location @custom_50x {
             internal;
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_50x_page()
+                local is_who = require "is_who"
+                is_who.handle_50x_page()
             }
         }
 
         # CATCH-ALL for unknown routes
         location / {
             content_by_lua_block {
-                local is_public = require "is_public"
-                is_public.handle_404_page()
+                local is_who = require "is_who"
+                is_who.handle_404_page()
             }
         }
     }
