guest_slot_number

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,9 +31,10 @@ http {
         listen 80;
         server_name localhost;
         
-        # SIMPLIFIED VARIABLES - ALL must be declared here
+        # FIXED: ALL REQUIRED VARIABLES - Must be declared here
         set $username 'guest';
         set $user_type 'is_none';
+        set $guest_slot_number '1';
 
         # STATIC ASSETS - No auth required
         location /js/ {
@@ -60,12 +61,6 @@ http {
             log_not_found off;
             access_log off;
         }
-
-        #location = /favicon.ico {
-        #    root /usr/local/openresty/nginx/dynamic_content;
-        #    log_not_found off;
-        #    access_log off;
-        #}
 
         # TEMPLATE-BASED ROUTES
         location = /login {
