chat -> file 0kb

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -34,7 +34,8 @@ http {
         # FIXED: ALL REQUIRED VARIABLES - Must be declared here
         set $username 'guest';
         set $user_type 'is_none';
-        set $guest_slot_number '1';
+        set $guest_slot_number '';
+        set $guest_slot_requested 'false';
 
         # STATIC ASSETS - No auth required
         location /js/ {
