--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,10 +32,10 @@ http {
         server_name localhost;
         
         # FIXED: ALL REQUIRED VARIABLES - Must be declared here
-        set $username 'guest';
-        set $user_type 'is_none';
+        set $username '';
+        set $user_type '';
         set $guest_slot_number '';
-        set $guest_slot_requested 'false';
+        set $guest_slot_requested '';
 
         # STATIC ASSETS - No auth required
         location /js/ {
