--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - Updated configuration with proper guest API support
+# nginx/nginx.conf - FIXED FOR STREAMING
 worker_processes auto;
 error_log /var/log/nginx/error.log warn;
 pid /var/run/nginx.pid;
@@ -6,6 +6,8 @@ pid /var/run/nginx.pid;
 env JWT_SECRET;
 env REDIS_HOST;
 env REDIS_PORT;
+env OLLAMA_URL;
+env OLLAMA_MODEL;
 
 events {
     worker_connections 1024;
@@ -18,6 +20,11 @@ http {
     sendfile        on;
     keepalive_timeout  65;
 
+    # FIXED: Disable buffering globally for streaming
+    proxy_buffering off;
+    proxy_request_buffering off;
+    proxy_http_version 1.1;
+    
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     resolver 127.0.0.11 ipv6=off;
@@ -31,7 +38,7 @@ http {
         listen 80;
         server_name localhost;
         
-        # FIXED: ALL REQUIRED VARIABLES - Must be declared here
+        # FIXED: ALL REQUIRED VARIABLES
         set $username '';
         set $user_type '';
         set $guest_slot_number '';
@@ -86,7 +93,7 @@ http {
             }
         }
         
-        # CHAT SPA ROUTE - With auto-guest functionality
+        # CHAT SPA ROUTE
         location = /chat {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -102,7 +109,7 @@ http {
             }
         }
         
-        # PENDING ROUTE (alias for dash for pending users)
+        # PENDING ROUTE
         location = /pending {
             content_by_lua_block {
                 local is_who = require "is_who"
@@ -168,7 +175,7 @@ http {
             }
         }
 
-        # GUEST API - FIXED: Now properly handles guest session creation
+        # GUEST API
         location ~ ^/api/guest/ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -188,11 +195,12 @@ http {
             }
         }
 
-        # CHAT API - Simple delegation to is_who routing
+        # CHAT API - FIXED FOR STREAMING
         location ~ ^/api/chat/ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            # STREAMING HEADERS - CRITICAL
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
@@ -201,12 +209,29 @@ http {
                 return 204;
             }
             
-            add_header 'Cache-Control' 'no-cache';
-            add_header 'Connection' 'keep-alive';
+            # CRITICAL: Disable ALL buffering for streaming
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_request_buffering off;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            
+            # STREAMING HEADERS
+            add_header 'Cache-Control' 'no-cache' always;
+            add_header 'Connection' 'keep-alive' always;
+            add_header 'X-Accel-Buffering' 'no' always;
+            
+            # CRITICAL: Enable real-time streaming
+            lua_check_client_abort on;
             
             lua_need_request_body on;
             content_by_lua_block {
-                -- Use the same routing logic as chat page, but for API
+                -- FIXED: Set proper streaming headers immediately
+                ngx.header["Content-Type"] = "text/event-stream"
+                ngx.header["Cache-Control"] = "no-cache"
+                ngx.header["Connection"] = "keep-alive"
+                ngx.header["X-Accel-Buffering"] = "no"
+                
                 local is_who = require "is_who"
                 is_who.route_to_handler("chat_api")
             }
