--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ ADMIN_USER_ID=admin
 # 🤖 MODEL CONFIGURATION
 # =============================================================================
 OLLAMA_VERSION=0.9.6
-OLLAMA_MODEL=devstral:24b
+OLLAMA_MODEL=devstral
 MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
 
