--- a/.env
+++ b/.env
@@ -34,15 +34,15 @@ MODEL_USE_MMAP=false                     # Model: DISABLED (matches server)
 MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
 
 # Enhanced hybrid settings
-OLLAMA_GPU_LAYERS=8                     # Enhanced GPU layers
+OLLAMA_GPU_LAYERS=12                     # Enhanced GPU layers
 OLLAMA_CONTEXT_SIZE=1024                 # 4K context window
 OLLAMA_BATCH_SIZE=128                    # Large batch size
 OLLAMA_NUM_THREAD=4                      # 8 CPU threads
 
 # Resource management
-OLLAMA_KEEP_ALIVE=300                    # 5 minutes (allow recovery)
-OLLAMA_NOPRUNE=0                         # Allow pruning
-OLLAMA_MAX_LOADED_MODELS=1               # Single model
+KEEP_ALIVE=99999                  # 5 minutes (allow recovery)
+NOPRUNE=0                         # Allow pruning
+MAX_LOADED_MODELS=1               # Single model
 
 # GPU settings - FIXED: Dynamic allocation
 # OLLAMA_GPU_MEMORY_FRACTION=0.8        # REMOVED - Dynamic allocation
@@ -51,7 +51,7 @@ NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
 # =============================================================================
 # 🎛️ MODEL PARAMETERS - ENHANCED
 # =============================================================================
-MODEL_TEMPERATURE=0.6
+MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
 MODEL_TOP_K=40
 MODEL_REPEAT_PENALTY=1.1
@@ -92,8 +92,7 @@ REDIS_URL=redis://redis:6379/0
 
 # Conservative timeouts
 UNLIMITED_TIMEOUT=600
-STREAMING_TIMEOUT=600
-MODEL_TIMEOUT=300
+STREAMING_TIMEOUT=300
 
 # =============================================================================
 # 📝 LOGGING
