--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - OLLAMA_MODELS=/home/ollama/.ollama/models
       - OLLAMA_MLOCK=${OLLAMA_MLOCK}
       - OLLAMA_MMAP=${OLLAMA_MMAP}
-      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
-      - OLLAMA_NOPRUNE=${OLLAMA_NOPRUNE}
-      - OLLAMA_MAX_LOADED_MODELS=${OLLAMA_MAX_LOADED_MODELS}
+      - KEEP_ALIVE=${KEEP_ALIVE}
+      - NOPRUNE=${NOPRUNE}
+      - MAX_LOADED_MODELS=${MAX_LOADED_MODELS}
       - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS}
       - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD}
       - OLLAMA_CONTEXT_SIZE=${OLLAMA_CONTEXT_SIZE}
