--- a/.env
+++ b/.env
@@ -35,14 +35,14 @@ MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
 
 # Enhanced hybrid settings
 OLLAMA_GPU_LAYERS=12                     # Enhanced GPU layers
-OLLAMA_CONTEXT_SIZE=1024                 # 4K context window
-OLLAMA_BATCH_SIZE=128                    # Large batch size
-OLLAMA_NUM_THREAD=4                      # 8 CPU threads
+OLLAMA_CONTEXT_SIZE=512                  # 512 context window
+OLLAMA_BATCH_SIZE=512                    # Large batch size
+OLLAMA_NUM_THREAD=8                      # 8 CPU threads
 
 # Resource management
-KEEP_ALIVE=99999                  # 5 minutes (allow recovery)
-NOPRUNE=0                         # Allow pruning
-MAX_LOADED_MODELS=1               # Single model
+KEEP_ALIVE=99999                         # Keep alive indefinitely
+NOPRUNE=0                                # Allow pruning
+MAX_LOADED_MODELS=1                      # Single model
 
 # GPU settings - FIXED: Dynamic allocation
 # OLLAMA_GPU_MEMORY_FRACTION=0.8        # REMOVED - Dynamic allocation
@@ -54,9 +54,15 @@ NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
 MODEL_TOP_K=40
-MODEL_REPEAT_PENALTY=1.1
-MODEL_MAX_TOKENS=1024
+MODEL_REPEAT_PENALTY=1
+MODEL_MAX_TOKENS=128
 MODEL_TIMEOUT=300
+
+# MISSING PARAMETERS - NOW ADDED
+MODEL_MIROSTAT=0                         # Disable Mirostat by default
+MODEL_MIROSTAT_ETA=0.1                   # Mirostat learning rate
+MODEL_MIROSTAT_TAU=5.0                   # Mirostat target entropy
+MODEL_STOP_SEQUENCES="<|endoftext|>,<|im_end|>,[DONE],<|end|>"  # Stop sequences
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS - ENHANCED
@@ -69,9 +75,9 @@ MAX_MESSAGE_LENGTH=10000                 # Larger messages
 MAX_CHATS_PER_USER=1
 MAX_PENDING_USERS=2
 MIN_USERNAME_LENGTH=3
-MAX_USERNAME_LENGTH=14
+MAX_USERNAME_LENGTH=12
 MIN_PASSWORD_LENGTH=6
-MAX_PASSWORD_LENGTH=128
+MAX_PASSWORD_LENGTH=16
 
 # =============================================================================
 # 🐳 DOCKER RESOURCES - ENHANCED
