--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# CORRECTED .env - Consistent Memory Management Settings
+# CLEAN .env - Optimized Configuration
 # =============================================================================
 
 # 🔐 JWT CONFIGURATION
@@ -21,53 +21,61 @@ MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
 
 # =============================================================================
-# ⚡ CORRECTED OLLAMA SETTINGS - NO CONFLICTS
+# ⚡ OLLAMA SERVER SETTINGS
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
 OLLAMA_LOAD_TIMEOUT=45m
 
-# CORRECTED: Memory settings - NO CONFLICTS between server and model
+# Memory settings
 OLLAMA_MMAP=0                            # Server: DISABLED
 OLLAMA_MLOCK=1                           # Server: ENABLED
-MODEL_USE_MMAP=false                     # Model: DISABLED (matches server)
-MODEL_USE_MLOCK=true                     # Model: ENABLED (matches server)
 
-# Enhanced hybrid settings
-OLLAMA_GPU_LAYERS=12                     # Enhanced GPU layers
-OLLAMA_CONTEXT_SIZE=512                  # 512 context window
-OLLAMA_BATCH_SIZE=512                    # Large batch size
-OLLAMA_NUM_THREAD=8                      # 8 CPU threads
+# Hybrid GPU+CPU settings
+OLLAMA_GPU_LAYERS=12                     # GPU layers
+OLLAMA_CONTEXT_SIZE=512                  # Context window
+OLLAMA_BATCH_SIZE=512                    # Batch size
+OLLAMA_NUM_THREAD=8                      # CPU threads
 
 # Resource management
-KEEP_ALIVE=99999                         # Keep alive indefinitely
-NOPRUNE=0                                # Allow pruning
-MAX_LOADED_MODELS=1                      # Single model
+OLLAMA_KEEP_ALIVE=99999                  # Keep models loaded (server-level setting)
+OLLAMA_NOPRUNE=0                         # Allow pruning
+OLLAMA_MAX_LOADED_MODELS=1               # Single model
 
-# GPU settings - FIXED: Dynamic allocation
-# OLLAMA_GPU_MEMORY_FRACTION=0.8        # REMOVED - Dynamic allocation
+# GPU settings
 NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - ENHANCED
+# 🎛️ MODEL PARAMETERS - BASED ON OFFICIAL OLLAMA DOCUMENTATION
 # =============================================================================
-MODEL_TEMPERATURE=0.7
-MODEL_TOP_P=0.9
-MODEL_TOP_K=40
-MODEL_REPEAT_PENALTY=1
-MODEL_MAX_TOKENS=128
-MODEL_TIMEOUT=300
 
-# MISSING PARAMETERS - NOW ADDED
-MODEL_MIROSTAT=0                         # Disable Mirostat by default
-MODEL_MIROSTAT_ETA=0.1                   # Mirostat learning rate
-MODEL_MIROSTAT_TAU=5.0                   # Mirostat target entropy
-MODEL_STOP_SEQUENCES="<|endoftext|>,<|im_end|>,[DONE],<|end|>"  # Stop sequences
+# Core model parameters
+MODEL_TEMPERATURE=0.7                    # Creativity level (0.0-2.0, default: 0.8)
+MODEL_TOP_P=0.9                         # Nucleus sampling (0.0-1.0, default: 0.9)  
+MODEL_TOP_K=40                          # Top-k sampling (1-100, default: 40)
+MODEL_MIN_P=0.05                        # Minimum probability threshold (0.0-1.0, default: 0.0)
+MODEL_REPEAT_PENALTY=1.1                # Repetition penalty (0.0-2.0, default: 1.1)
+MODEL_REPEAT_LAST_N=64                  # Lookback for repetition (int, default: 64)
+
+# Context and prediction settings
+MODEL_NUM_CTX=512                       # Context window size (int, default: 4096)
+MODEL_NUM_PREDICT=128                   # Max tokens to predict (int, default: -1 unlimited)
+MODEL_SEED=42                           # Random seed for reproducibility (int, default: 0)
+
+# Stop sequences (multiple stops supported)
+MODEL_STOP_1="<|endoftext|>"           # Stop sequence 1
+MODEL_STOP_2="<|im_end|>"              # Stop sequence 2  
+MODEL_STOP_3="[DONE]"                  # Stop sequence 3
+MODEL_STOP_4="<|end|>"                 # Stop sequence 4
+
+# Removed: keep_alive (handled at server level via OLLAMA_KEEP_ALIVE)
+# Removed: Mirostat parameters (deprecated)
+# Removed: use_mlock (deprecated)
+# Removed: GPU/threading params (handled at server level)
 
 # =============================================================================
-# 📱 APPLICATION SETTINGS - ENHANCED
+# 📱 APPLICATION SETTINGS
 # =============================================================================
-CHAT_HISTORY_LIMIT=10
 RATE_LIMIT_MESSAGES_PER_MINUTE=8         # Enhanced rate limit
 MAX_MESSAGE_LENGTH=10000                 # Larger messages
 
@@ -80,25 +88,21 @@ MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=16
 
 # =============================================================================
-# 🐳 DOCKER RESOURCES - ENHANCED
+# 🐳 DOCKER RESOURCES
 # =============================================================================
 OLLAMA_MEMORY=16G
-OLLAMA_CPU=4                             # Enhanced CPU allocation
+OLLAMA_CPU=8                             # CPU allocation
 REDIS_MEMORY=1G
 REDIS_CPU=1
-NGINX_MEMORY=512M
+NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
-# 📦 REDIS & TIMEOUTS
+# 📦 REDIS & NETWORK
 # =============================================================================
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_URL=redis://redis:6379/0
-
-# Conservative timeouts
-UNLIMITED_TIMEOUT=600
-STREAMING_TIMEOUT=300
 
 # =============================================================================
 # 📝 LOGGING
