--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ OLLAMA_BATCH_SIZE=512                    # Batch size
 OLLAMA_NUM_THREAD=8                      # CPU threads
 
 # Resource management
-OLLAMA_KEEP_ALIVE=99999                  # Keep models loaded (server-level setting)
+OLLAMA_KEEP_ALIVE=24h                    # Keep models loaded for 24 hours
 OLLAMA_NOPRUNE=0                         # Allow pruning
 OLLAMA_MAX_LOADED_MODELS=1               # Single model
 
@@ -91,7 +91,7 @@ MAX_PASSWORD_LENGTH=16
 # 🐳 DOCKER RESOURCES
 # =============================================================================
 OLLAMA_MEMORY=16G
-OLLAMA_CPU=8                             # CPU allocation
+OLLAMA_CPU=4                             # CPU allocation
 REDIS_MEMORY=1G
 REDIS_CPU=1
 NGINX_MEMORY=1G
