--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ OLLAMA_MLOCK=1                           # Server: ENABLED
 
 # Hybrid GPU+CPU settings
 OLLAMA_GPU_LAYERS=12                     # GPU layers
-OLLAMA_CONTEXT_SIZE=512                  # Context window
+OLLAMA_CONTEXT_SIZE=4096                 # Context window (default: 4096)
 OLLAMA_BATCH_SIZE=512                    # Batch size
 OLLAMA_NUM_THREAD=8                      # CPU threads
 
@@ -49,18 +49,18 @@ NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
 # 🎛️ MODEL PARAMETERS - BASED ON OFFICIAL OLLAMA DOCUMENTATION
 # =============================================================================
 
-# Core model parameters
-MODEL_TEMPERATURE=0.7                    # Creativity level (0.0-2.0, default: 0.8)
-MODEL_TOP_P=0.9                         # Nucleus sampling (0.0-1.0, default: 0.9)  
-MODEL_TOP_K=40                          # Top-k sampling (1-100, default: 40)
-MODEL_MIN_P=0.05                        # Minimum probability threshold (0.0-1.0, default: 0.0)
-MODEL_REPEAT_PENALTY=1.1                # Repetition penalty (0.0-2.0, default: 1.1)
-MODEL_REPEAT_LAST_N=64                  # Lookback for repetition (int, default: 64)
+# Core model parameters (using documentation defaults)
+MODEL_TEMPERATURE=0.8                    # Default: 0.8
+MODEL_TOP_P=0.9                         # Default: 0.9  
+MODEL_TOP_K=40                          # Default: 40
+MODEL_MIN_P=0.0                         # Default: 0.0 (disabled)
+MODEL_REPEAT_PENALTY=1.1                # Default: 1.1
+MODEL_REPEAT_LAST_N=64                  # Default: 64
 
-# Context and prediction settings
-MODEL_NUM_CTX=512                       # Context window size (int, default: 4096)
-MODEL_NUM_PREDICT=128                   # Max tokens to predict (int, default: -1 unlimited)
-MODEL_SEED=42                           # Random seed for reproducibility (int, default: 0)
+# Context and prediction settings (using documentation defaults)
+MODEL_NUM_CTX=4096                      # Default: 4096
+MODEL_NUM_PREDICT=-1                    # Default: -1 (infinite)
+MODEL_SEED=0                            # Default: 0
 
 # Stop sequences (multiple stops supported)
 MODEL_STOP_1="<|endoftext|>"           # Stop sequence 1
@@ -94,7 +94,7 @@ OLLAMA_MEMORY=16G
 OLLAMA_CPU=4                             # CPU allocation
 REDIS_MEMORY=1G
 REDIS_CPU=1
-NGINX_MEMORY=1G
+NGINX_MEMORY=512M
 NGINX_CPU=1
 
 # =============================================================================
