--- a/.env
+++ b/.env
@@ -28,8 +28,8 @@ OLLAMA_URL=http://ollama:11434
 OLLAMA_LOAD_TIMEOUT=45m
 
 # Memory settings
-OLLAMA_MMAP=0                            # Server: DISABLED
-OLLAMA_MLOCK=1                           # Server: ENABLED
+OLLAMA_MMAP=false                            # Server: DISABLED
+#OLLAMA_MLOCK=1                           # Server: ENABLED
 
 # Hybrid GPU+CPU settings
 OLLAMA_GPU_LAYERS=12                     # GPU layers
