--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ OLLAMA_LOAD_TIMEOUT=45m
 
 # Memory settings
 OLLAMA_MMAP=false                            # Server: DISABLED
-#OLLAMA_MLOCK=1                           # Server: ENABLED
+OLLAMA_MLOCK=true                            # Server: ENABLED
 
 # Hybrid GPU+CPU settings
 OLLAMA_GPU_LAYERS=12                     # GPU layers
