--- a/.env
+++ b/.env
@@ -32,13 +32,13 @@ OLLAMA_MMAP=false                            # Server: DISABLED
 OLLAMA_MLOCK=true                            # Server: ENABLED
 
 # Hybrid GPU+CPU settings
-OLLAMA_GPU_LAYERS=12                     # GPU layers
-OLLAMA_CONTEXT_SIZE=4096                 # Context window (default: 4096)
-OLLAMA_BATCH_SIZE=512                    # Batch size
-OLLAMA_NUM_THREAD=8                      # CPU threads
+OLLAMA_GPU_LAYERS=41                     # GPU layers
+OLLAMA_CONTEXT_SIZE=512                 # Context window (default: 4096)
+OLLAMA_BATCH_SIZE=128                    # Batch size
+OLLAMA_NUM_THREAD=4                      # CPU threads
 
 # Resource management
-OLLAMA_KEEP_ALIVE=24h                    # Keep models loaded for 24 hours
+OLLAMA_KEEP_ALIVE=99999h                    # Keep models loaded for 24 hours
 OLLAMA_NOPRUNE=0                         # Allow pruning
 OLLAMA_MAX_LOADED_MODELS=1               # Single model
 
@@ -58,7 +58,7 @@ MODEL_REPEAT_PENALTY=1.1                # Default: 1.1
 MODEL_REPEAT_LAST_N=64                  # Default: 64
 
 # Context and prediction settings (using documentation defaults)
-MODEL_NUM_CTX=4096                      # Default: 4096
+MODEL_NUM_CTX=1024                      # Default: 4096
 MODEL_NUM_PREDICT=-1                    # Default: -1 (infinite)
 MODEL_SEED=0                            # Default: 0
 
@@ -94,7 +94,7 @@ OLLAMA_MEMORY=16G
 OLLAMA_CPU=4                             # CPU allocation
 REDIS_MEMORY=1G
 REDIS_CPU=1
-NGINX_MEMORY=512M
+NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
