lua_shared_dict guest_toggle 64k;

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -31,6 +31,7 @@ http {
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
     
     # Shared memory zones
+    lua_shared_dict guest_toggle 64k;
     lua_shared_dict guest_sessions 10m;
     lua_shared_dict sse_sessions 5m;
 
