--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# CLEAN .env - Optimized Configuration
+# CLEAN .env - Optimized Configuration for Limited VRAM
 # =============================================================================
 
 # 🔐 JWT CONFIGURATION
@@ -21,63 +21,59 @@ MODEL_DISPLAY_NAME=Devstral Small 2505
 MODEL_DESCRIPTION=Advanced coding and reasoning model optimized for hybrid GPU+CPU processing
 
 # =============================================================================
-# ⚡ OLLAMA SERVER SETTINGS
+# ⚡ OLLAMA SERVER SETTINGS - OPTIMIZED FOR LIMITED VRAM
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_LOAD_TIMEOUT=45m
+OLLAMA_LOAD_TIMEOUT=600s                    # Increased timeout for slow loading
 
-# Memory settings
-OLLAMA_MMAP=false                            # Server: DISABLED
-OLLAMA_MLOCK=true                            # Server: ENABLED
+# Memory settings - CRITICAL FIXES
+OLLAMA_MMAP=true                            # ENABLED for large models with limited VRAM
+OLLAMA_MLOCK=false                          # DISABLED to reduce memory pressure
 
-# Hybrid GPU+CPU settings
-OLLAMA_GPU_LAYERS=41                     # GPU layers
-OLLAMA_CONTEXT_SIZE=512                 # Context window (default: 4096)
-OLLAMA_BATCH_SIZE=128                    # Batch size
-OLLAMA_NUM_THREAD=12                      # CPU threads
+# Hybrid GPU+CPU settings - REDUCED FOR STABILITY
+OLLAMA_GPU_LAYERS=8                         # REDUCED from 41 to 8 (critical fix)
+OLLAMA_CONTEXT_SIZE=1024                    # REDUCED from 512 to manageable size
+OLLAMA_BATCH_SIZE=64                        # REDUCED from 128 to 64
+OLLAMA_NUM_THREAD=8                         # INCREASED CPU threads to compensate
 
-# Resource management
-OLLAMA_KEEP_ALIVE=99999h                    # Keep models loaded for 24 hours
-OLLAMA_NOPRUNE=0                         # Allow pruning
-OLLAMA_MAX_LOADED_MODELS=1               # Single model
+# Resource management - OPTIMIZED
+OLLAMA_KEEP_ALIVE=30m                       # REDUCED from 99999h to 30 minutes
+OLLAMA_NOPRUNE=0                           # Allow pruning
+OLLAMA_MAX_LOADED_MODELS=1                 # Single model
+OLLAMA_PARALLEL=1                          # REDUCED parallel processing
 
 # GPU settings
-NVIDIA_VISIBLE_DEVICES=0                 # Use GPU 0
+NVIDIA_VISIBLE_DEVICES=0                   # Use GPU 0
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - BASED ON OFFICIAL OLLAMA DOCUMENTATION
+# 🎛️ MODEL PARAMETERS - REDUCED FOR STABILITY
 # =============================================================================
 
-# Core model parameters (using documentation defaults)
-MODEL_TEMPERATURE=0.8                    # Default: 0.8
-MODEL_TOP_P=0.9                         # Default: 0.9  
-MODEL_TOP_K=40                          # Default: 40
-MODEL_MIN_P=0.0                         # Default: 0.0 (disabled)
-MODEL_REPEAT_PENALTY=1.1                # Default: 1.1
-MODEL_REPEAT_LAST_N=64                  # Default: 64
+# Core model parameters
+MODEL_TEMPERATURE=0.7                      # Reduced from 0.8
+MODEL_TOP_P=0.9                           # Default: 0.9  
+MODEL_TOP_K=40                            # Default: 40
+MODEL_MIN_P=0.0                           # Default: 0.0 (disabled)
+MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
+MODEL_REPEAT_LAST_N=64                    # Default: 64
 
-# Context and prediction settings (using documentation defaults)
-MODEL_NUM_CTX=1024                      # Default: 4096
-MODEL_NUM_PREDICT=-1                    # Default: -1 (infinite)
-MODEL_SEED=0                            # Default: 0
+# Context and prediction settings - REDUCED
+MODEL_NUM_CTX=1024                        # REDUCED from 1024 to stable size
+MODEL_NUM_PREDICT=512                     # REDUCED to 512 tokens max
+MODEL_SEED=0                              # Default: 0
 
-# Stop sequences (multiple stops supported)
-MODEL_STOP_1="<|endoftext|>"           # Stop sequence 1
-MODEL_STOP_2="<|im_end|>"              # Stop sequence 2  
-MODEL_STOP_3="[DONE]"                  # Stop sequence 3
-MODEL_STOP_4="<|end|>"                 # Stop sequence 4
-
-# Removed: keep_alive (handled at server level via OLLAMA_KEEP_ALIVE)
-# Removed: Mirostat parameters (deprecated)
-# Removed: use_mlock (deprecated)
-# Removed: GPU/threading params (handled at server level)
+# Stop sequences
+MODEL_STOP_1="<|endoftext|>"             
+MODEL_STOP_2="<|im_end|>"                
+MODEL_STOP_3="[DONE]"                    
+MODEL_STOP_4="<|end|>"                   
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
 # =============================================================================
-RATE_LIMIT_MESSAGES_PER_MINUTE=8         # Enhanced rate limit
-MAX_MESSAGE_LENGTH=10000                 # Larger messages
+RATE_LIMIT_MESSAGES_PER_MINUTE=8         
+MAX_MESSAGE_LENGTH=5000                   # REDUCED from 10000
 
 # User Management
 MAX_CHATS_PER_USER=1
@@ -88,13 +84,13 @@ MIN_PASSWORD_LENGTH=6
 MAX_PASSWORD_LENGTH=16
 
 # =============================================================================
-# 🐳 DOCKER RESOURCES
+# 🐳 DOCKER RESOURCES - OPTIMIZED
 # =============================================================================
-OLLAMA_MEMORY=16G
-OLLAMA_CPU=6                             # CPU allocation
-REDIS_MEMORY=1G
+OLLAMA_MEMORY=12G                         # REDUCED from 16G
+OLLAMA_CPU=4                              # REDUCED from 6
+REDIS_MEMORY=512M                         # REDUCED from 1G
 REDIS_CPU=1
-NGINX_MEMORY=1G
+NGINX_MEMORY=512M                         # REDUCED from 1G
 NGINX_CPU=1
 
 # =============================================================================
