reduce model option conflicts

--- a/.env
+++ b/.env
@@ -32,13 +32,13 @@ OLLAMA_MMAP=true                            # ENABLED for large models with limi
 OLLAMA_MLOCK=false                          # DISABLED to reduce memory pressure
 
 # Hybrid GPU+CPU settings - REDUCED FOR STABILITY
-OLLAMA_GPU_LAYERS=8                         # REDUCED from 41 to 8 (critical fix)
-OLLAMA_CONTEXT_SIZE=1024                    # REDUCED from 512 to manageable size
+OLLAMA_GPU_LAYERS=12                         # REDUCED from 41 to 8 (critical fix)
+OLLAMA_CONTEXT_SIZE=256                    # REDUCED from 512 to manageable size
 OLLAMA_BATCH_SIZE=64                        # REDUCED from 128 to 64
-OLLAMA_NUM_THREAD=8                         # INCREASED CPU threads to compensate
+OLLAMA_NUM_THREAD=4                         # INCREASED CPU threads to compensate
 
 # Resource management - OPTIMIZED
-OLLAMA_KEEP_ALIVE=30m                       # REDUCED from 99999h to 30 minutes
+OLLAMA_KEEP_ALIVE=99999h                   
 OLLAMA_NOPRUNE=0                           # Allow pruning
 OLLAMA_MAX_LOADED_MODELS=1                 # Single model
 OLLAMA_PARALLEL=1                          # REDUCED parallel processing
@@ -59,8 +59,8 @@ MODEL_REPEAT_PENALTY=1.1                  # Default: 1.1
 MODEL_REPEAT_LAST_N=64                    # Default: 64
 
 # Context and prediction settings - REDUCED
-MODEL_NUM_CTX=1024                        # REDUCED from 1024 to stable size
-MODEL_NUM_PREDICT=512                     # REDUCED to 512 tokens max
+MODEL_NUM_CTX=256                        # REDUCED from 1024 to stable size
+MODEL_NUM_PREDICT=128                     # REDUCED to 512 tokens max
 MODEL_SEED=0                              # Default: 0
 
 # Stop sequences
@@ -86,7 +86,7 @@ MAX_PASSWORD_LENGTH=16
 # =============================================================================
 # 🐳 DOCKER RESOURCES - OPTIMIZED
 # =============================================================================
-OLLAMA_MEMORY=12G                         # REDUCED from 16G
+OLLAMA_MEMORY=15G                         
 OLLAMA_CPU=4                              # REDUCED from 6
 REDIS_MEMORY=512M                         # REDUCED from 1G
 REDIS_CPU=1
